--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -16,6 +16,7 @@
   },
   "wallet": {
     "lightning": {
+      "get_invoice": "Rechnung erstellen",
       "short": "ln"
     },
     "onchain": {
